@@ -1,14 +1,17 @@
 package src;
 
 import java.util.ArrayList;
+import java.util.Date;
 
 public class Experiences {
-    public int jobStartDate;
-    public int jobEndDate;
-    public String jobDuties;
+    public String companyName;
+    public Date jobStartDate;
+    public Date jobEndDate;
+    public ArrayList<String> jobDuties;
     public String jobTitle;
     
-    public Experiences(int jobStartDate, int jobEndDate, String jobDuties, String jobTitle) {
+    public Experiences(String companyName, String jobTitle, Date jobStartDate, Date jobEndDate, ArrayList<String> jobDuties ) {
+        this.companyName = companyName;
         this.jobDuties = jobDuties;
         this.jobStartDate = jobStartDate;
         this.jobEndDate = jobEndDate;
